dnl Process this file with autoconf to produce a configure script.
AC_INIT(bfr.h)
AM_INIT_AUTOMAKE(bfr, 1.6)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday select strstr strtol)

AC_OUTPUT(testit/Makefile Makefile bfr.spec)
